httproute-with-middleware.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: webapp-httproute
  namespace: default
spec:
  parentRefs:
  - name: traefik
    namespace: default
  hostnames:
  - webapp.kubernetes.technology
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    filters:
    - type: ExtensionRef
      extensionRef:
        group: traefik.io
        kind: Middleware
        name: cors
    backendRefs:
    - name: webapp
      namespace: default
      port: 80
